-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
None
-
3
-
9223372036854775807
This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/5c0452f5-d96f-4c8d-9d27-04b71f59c2ee
test_207 failed with the following error:
Timeout occurred after 400 minutes, last suite running was sanity-lnet
Test session details:
clients: https://build.whamcloud.com/job/lustre-reviews/96852 - 4.18.0-425.10.1.el8_7.aarch64
servers: https://build.whamcloud.com/job/lustre-reviews/96852 - 4.18.0-477.15.1.el8_lustre.x86_64
It looks like this started failing on 2023-08-11 before patch https://review.whamcloud.com/51921 "LU-17006 lnet: set up routes for going across subnets" landed, then started failing for everyone when it landed to master on 2023-08-31.
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity-lnet test_207 - Timeout occurred after 400 minutes, last suite running was sanity-lnet
- is related to
-
LU-17207 LNet: race between monitor thread stopping and discovery thread PUSH may cause a crash
-
- Resolved
-